--- a/Draw/BBS/Controller/View/BBSPostCell.xib
+++ b/Draw/BBS/Controller/View/BBSPostCell.xib
@@ -69,11 +69,11 @@
 						</object>
 						<nil key="IBUIHighlightedColor"/>
 						<int key="IBUIBaselineAdjustment">0</int>
-						<object class="IBUIFontDescription" key="IBUIFontDescription" id="778143789">
+						<object class="IBUIFontDescription" key="IBUIFontDescription" id="91171069">
 							<int key="type">1</int>
 							<double key="pointSize">16</double>
 						</object>
-						<object class="NSFont" key="IBUIFont" id="929719896">
+						<object class="NSFont" key="IBUIFont" id="880295490">
 							<string key="NSName">Helvetica</string>
 							<double key="NSSize">16</double>
 							<int key="NSfFlags">16</int>
@@ -128,8 +128,8 @@
 						<int key="IBUIBaselineAdjustment">0</int>
 						<int key="IBUINumberOfLines">1000</int>
 						<int key="IBUILineBreakMode">1</int>
-						<reference key="IBUIFontDescription" ref="778143789"/>
-						<reference key="IBUIFont" ref="929719896"/>
+						<reference key="IBUIFontDescription" ref="91171069"/>
+						<reference key="IBUIFont" ref="880295490"/>
 						<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
 						<double key="preferredMaxLayoutWidth">240</double>
 					</object>
@@ -222,6 +222,7 @@
 						</object>
 						<nil key="IBUIHighlightedColor"/>
 						<int key="IBUIBaselineAdjustment">0</int>
+						<int key="IBUITextAlignment">2</int>
 						<object class="IBUIFontDescription" key="IBUIFontDescription">
 							<int key="type">1</int>
 							<double key="pointSize">13</double>
