--- a/Draw/ZhaJinHua/View/ZJHSettingView~ipad.xib
+++ b/Draw/ZhaJinHua/View/ZJHSettingView~ipad.xib
@@ -39,8 +39,9 @@
 					<object class="IBUIView" id="1058522842">
 						<reference key="NSNextResponder" ref="924395211"/>
 						<int key="NSvFlags">274</int>
-						<string key="NSFrameSize">{320, 480}</string>
+						<string key="NSFrameSize">{768, 1004}</string>
 						<reference key="NSSuperview" ref="924395211"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="100400245"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<object class="NSColor" key="IBUIBackgroundColor" id="117131454">
@@ -52,13 +53,14 @@
 					</object>
 					<object class="IBUIView" id="100400245">
 						<reference key="NSNextResponder" ref="924395211"/>
-						<int key="NSvFlags">292</int>
+						<int key="NSvFlags">319</int>
 						<array class="NSMutableArray" key="NSSubviews">
 							<object class="IBUIImageView" id="55846250">
 								<reference key="NSNextResponder" ref="100400245"/>
 								<int key="NSvFlags">274</int>
-								<string key="NSFrame">{{0, 12}, {234, 137}}</string>
+								<string key="NSFrame">{{0, 12}, {579, 308}}</string>
 								<reference key="NSSuperview" ref="100400245"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="740675348"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<object class="NSColor" key="IBUIBackgroundColor" id="356567133">
@@ -70,9 +72,10 @@
 							</object>
 							<object class="IBUIButton" id="62217588">
 								<reference key="NSNextResponder" ref="100400245"/>
-								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{91, 39}, {57, 29}}</string>
+								<int key="NSvFlags">319</int>
+								<string key="NSFrame">{{218, 81}, {136, 60}}</string>
 								<reference key="NSSuperview" ref="100400245"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="1069732023"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<reference key="IBUIBackgroundColor" ref="356567133"/>
@@ -99,21 +102,22 @@
 									<string key="NSClassName">NSImage</string>
 									<string key="NSResourceName">settingleft_unselect@2x.png</string>
 								</object>
-								<object class="IBUIFontDescription" key="IBUIFontDescription" id="72491277">
+								<object class="IBUIFontDescription" key="IBUIFontDescription" id="683757199">
 									<int key="type">2</int>
-									<double key="pointSize">16</double>
+									<double key="pointSize">32</double>
 								</object>
-								<object class="NSFont" key="IBUIFont" id="216995656">
+								<object class="NSFont" key="IBUIFont" id="780371897">
 									<string key="NSName">Helvetica-Bold</string>
-									<double key="NSSize">16</double>
+									<double key="NSSize">32</double>
 									<int key="NSfFlags">16</int>
 								</object>
 							</object>
 							<object class="IBUIButton" id="835119716">
 								<reference key="NSNextResponder" ref="100400245"/>
-								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{91, 93}, {57, 29}}</string>
+								<int key="NSvFlags">319</int>
+								<string key="NSFrame">{{218, 194}, {136, 60}}</string>
 								<reference key="NSSuperview" ref="100400245"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="1000951452"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<reference key="IBUIBackgroundColor" ref="356567133"/>
@@ -128,14 +132,15 @@
 								<reference key="IBUINormalTitleShadowColor" ref="47555669"/>
 								<reference key="IBUISelectedBackgroundImage" ref="394793231"/>
 								<reference key="IBUINormalBackgroundImage" ref="280240232"/>
-								<reference key="IBUIFontDescription" ref="72491277"/>
-								<reference key="IBUIFont" ref="216995656"/>
+								<reference key="IBUIFontDescription" ref="683757199"/>
+								<reference key="IBUIFont" ref="780371897"/>
 							</object>
 							<object class="IBUIImageView" id="74523642">
 								<reference key="NSNextResponder" ref="100400245"/>
-								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{23, 89}, {40, 37}}</string>
+								<int key="NSvFlags">319</int>
+								<string key="NSFrame">{{55, 186}, {95, 77}}</string>
 								<reference key="NSSuperview" ref="100400245"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="835119716"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<reference key="IBUIBackgroundColor" ref="356567133"/>
@@ -148,9 +153,10 @@
 							</object>
 							<object class="IBUIImageView" id="1048695024">
 								<reference key="NSNextResponder" ref="100400245"/>
-								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{23, 35}, {40, 37}}</string>
+								<int key="NSvFlags">319</int>
+								<string key="NSFrame">{{55, 73}, {95, 77}}</string>
 								<reference key="NSSuperview" ref="100400245"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="62217588"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<reference key="IBUIBackgroundColor" ref="356567133"/>
@@ -163,9 +169,11 @@
 							</object>
 							<object class="IBUIButton" id="1000951452">
 								<reference key="NSNextResponder" ref="100400245"/>
-								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{147, 93}, {57, 29}}</string>
+								<int key="NSvFlags">319</int>
+								<string key="NSFrame">{{352, 194}, {136, 60}}</string>
 								<reference key="NSSuperview" ref="100400245"/>
+								<reference key="NSWindow"/>
+								<reference key="NSNextKeyView"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<reference key="IBUIBackgroundColor" ref="356567133"/>
 								<bool key="IBUIOpaque">NO</bool>
@@ -185,14 +193,15 @@
 									<string key="NSClassName">NSImage</string>
 									<string key="NSResourceName">settingright_unselect@2x.png</string>
 								</object>
-								<reference key="IBUIFontDescription" ref="72491277"/>
-								<reference key="IBUIFont" ref="216995656"/>
+								<reference key="IBUIFontDescription" ref="683757199"/>
+								<reference key="IBUIFont" ref="780371897"/>
 							</object>
 							<object class="IBUIButton" id="1069732023">
 								<reference key="NSNextResponder" ref="100400245"/>
-								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{147, 39}, {57, 29}}</string>
+								<int key="NSvFlags">319</int>
+								<string key="NSFrame">{{352, 81}, {136, 60}}</string>
 								<reference key="NSSuperview" ref="100400245"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="74523642"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<reference key="IBUIBackgroundColor" ref="356567133"/>
@@ -207,14 +216,15 @@
 								<reference key="IBUINormalTitleShadowColor" ref="47555669"/>
 								<reference key="IBUISelectedBackgroundImage" ref="605353998"/>
 								<reference key="IBUINormalBackgroundImage" ref="529091945"/>
-								<reference key="IBUIFontDescription" ref="72491277"/>
-								<reference key="IBUIFont" ref="216995656"/>
+								<reference key="IBUIFontDescription" ref="683757199"/>
+								<reference key="IBUIFont" ref="780371897"/>
 							</object>
 							<object class="IBUIButton" id="740675348">
 								<reference key="NSNextResponder" ref="100400245"/>
-								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{220, 0}, {27, 27}}</string>
+								<int key="NSvFlags">319</int>
+								<string key="NSFrame">{{527, 0}, {64, 56}}</string>
 								<reference key="NSSuperview" ref="100400245"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="1048695024"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<reference key="IBUIBackgroundColor" ref="356567133"/>
@@ -229,12 +239,20 @@
 									<string key="NSClassName">NSImage</string>
 									<string key="NSResourceName">clean_input@2x.png</string>
 								</object>
-								<reference key="IBUIFontDescription" ref="72491277"/>
-								<reference key="IBUIFont" ref="216995656"/>
+								<object class="IBUIFontDescription" key="IBUIFontDescription">
+									<int key="type">2</int>
+									<double key="pointSize">16</double>
+								</object>
+								<object class="NSFont" key="IBUIFont">
+									<string key="NSName">Helvetica-Bold</string>
+									<double key="NSSize">16</double>
+									<int key="NSfFlags">16</int>
+								</object>
 							</object>
 						</array>
-						<string key="NSFrame">{{37, 132}, {247, 157}}</string>
+						<string key="NSFrame">{{88, 276}, {592, 328}}</string>
 						<reference key="NSSuperview" ref="924395211"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="55846250"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<reference key="IBUIBackgroundColor" ref="356567133"/>
@@ -242,8 +260,9 @@
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 					</object>
 				</array>
-				<string key="NSFrameSize">{320, 480}</string>
+				<string key="NSFrameSize">{768, 1004}</string>
 				<reference key="NSSuperview"/>
+				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="1058522842"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<reference key="IBUIBackgroundColor" ref="356567133"/>
@@ -494,7 +513,81 @@
 			<nil key="sourceID"/>
 			<int key="maxID">89</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes"/>
+		<object class="IBClassDescriber" key="IBDocument.Classes">
+			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
+				<object class="IBPartialClassDescription">
+					<string key="className">CommonInfoView</string>
+					<string key="superclassName">UIView</string>
+					<object class="NSMutableDictionary" key="outlets">
+						<string key="NS.key.0">contentView</string>
+						<string key="NS.object.0">UIView</string>
+					</object>
+					<object class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<string key="NS.key.0">contentView</string>
+						<object class="IBToOneOutletInfo" key="NS.object.0">
+							<string key="name">contentView</string>
+							<string key="candidateClassName">UIView</string>
+						</object>
+					</object>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/CommonInfoView.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">ZJHSettingView</string>
+					<string key="superclassName">CommonInfoView</string>
+					<dictionary class="NSMutableDictionary" key="outlets">
+						<string key="audioImageView">UIImageView</string>
+						<string key="audioOffButton">UIButton</string>
+						<string key="audioOnButton">UIButton</string>
+						<string key="bgImageView">UIImageView</string>
+						<string key="closeButton">UIButton</string>
+						<string key="musicImageView">UIImageView</string>
+						<string key="musicOffButton">UIButton</string>
+						<string key="musicOnButton">UIButton</string>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<object class="IBToOneOutletInfo" key="audioImageView">
+							<string key="name">audioImageView</string>
+							<string key="candidateClassName">UIImageView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="audioOffButton">
+							<string key="name">audioOffButton</string>
+							<string key="candidateClassName">UIButton</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="audioOnButton">
+							<string key="name">audioOnButton</string>
+							<string key="candidateClassName">UIButton</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="bgImageView">
+							<string key="name">bgImageView</string>
+							<string key="candidateClassName">UIImageView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="closeButton">
+							<string key="name">closeButton</string>
+							<string key="candidateClassName">UIButton</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="musicImageView">
+							<string key="name">musicImageView</string>
+							<string key="candidateClassName">UIImageView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="musicOffButton">
+							<string key="name">musicOffButton</string>
+							<string key="candidateClassName">UIButton</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="musicOnButton">
+							<string key="name">musicOnButton</string>
+							<string key="candidateClassName">UIButton</string>
+						</object>
+					</dictionary>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/ZJHSettingView.h</string>
+					</object>
+				</object>
+			</array>
+		</object>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
